# conversation-insights

./: .env.example  .gitignore  Dockerfile  HISTORY_MARKER_analytics.txt  HISTORY_MARKER_cors.txt  HISTORY_MARKER_fe.txt  HISTORY_MARKER_repo.txt  HISTORY_MARKER_sync.txt  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: backend-ci.yml  docker-ci.yml  frontend-ci.yml  release-check.yml
app/: main.py
app/api/: router.py
app/api/routes/: agents.py  analytics.py  analyze.py  calls.py  health.py  ingest.py  integrations.py  jobs.py  knowledge.py
app/clients/: rag_client.py
app/core/: auth.py  config.py  database.py  logging.py
app/db/: store.py
app/models/: schemas.py
app/repositories/: agent_repository.py  call_repository.py  job_repository.py
app/services/: analysis_service.py  analytics_service.py  analyze_orchestrator.py  call_service.py  corpus_sync_service.py  ingestion_service.py  job_service.py  llm_client.py  rag_sync_service.py
data/: agents.json  calls.json  jobs.json  sample_calls.json
docs/: activity-log.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AddCallForm.tsx  ErrorBoundary.tsx  JobResultPanel.tsx  Layout.tsx  TranscriptView.tsx  ui.tsx
frontend/src/hooks/: useAsyncLoad.ts  useSystemHealth.ts
static/: app.js  index.html  style.css
tests/: conftest.py  test_analysis_service.py  test_analytics.py  test_api.py  test_jobs.py
(+10 files in other folders)
